fix horiz scroller, fix new card alignment

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
 
 .container {
   max-width:1500px !important;
+  min-width: 1300px !important;
 }
 
 
